feat: implement create new admin & fix file upload issue (SIL-48, SIL-49) (#13)
* feat: implement create new admin & fix file upload issue

* fix: filename format

* Update src/modules/reports/reports.service.ts


* Update src/modules/reports/reports.schema.ts


* fix: lint

---------
