# src/modules/reports/reports.schema.ts
@@ -1,14 +1,17 @@
 import { createSelectSchema } from "drizzle-orm/zod";
 import { reports } from "../../shared/db/schema";
+import { extendZodWithOpenApi } from '@asteasolutions/zod-to-openapi';
 import z from "zod";
 import { STATUS } from "../../shared/utils/status";
+
+extendZodWithOpenApi(z);
 
 export const reportSchema = createSelectSchema(reports);
 
 export const createReportSchema = z.object({
     roomId: z.string().uuid(),
     description: z.string().min(1),
-    imageUrl: z.string().url().optional().or(z.literal('')),
+    image: z.any().optional().openapi({ type: 'string', format: 'binary' }),
     status: z.enum(STATUS).default(STATUS.REPORTED).optional(),
     isUrgent: z.preprocess((val) => {
         if (typeof val === 'string') return val === 'true';
@@ -20,7 +23,14 @@ export const createReportSchema = z.object({
 export const updateReportSchema = z.object({
     roomId: z.string().uuid().optional(),
     description: z.string().min(1).optional(),
-    imageUrl: z.string().url().optional().or(z.literal('')),
+    image: z.any()
+        .refine((file) => !file || file.size <= 5 * 1024 * 1024, 'Max image size is 5MB.')
+        .refine(
+            (file) => !file || ['image/jpeg', 'image/jpg', 'image/png'].includes(file.mimetype),
+            'Only .jpg, .jpeg, and .png formats are supported.'
+        )
+        .optional()
+        .openapi({ type: 'string', format: 'binary' }),
     status: z.enum(STATUS).optional(),
     isUrgent: z.preprocess((val) => {
         if (typeof val === 'string') return val === 'true';
