# src/modules/users/users.route.ts
@@ -8,10 +8,11 @@ import { ROLES } from '../../shared/utils/roles';
 const usersRouter = Router();
 
 usersRouter.use(verifyToken);
-usersRouter.use(authorizeRole([ROLES.ADMIN]));
+usersRouter.use(authorizeRole([ROLES.ADMIN, ROLES.SUPERADMIN]));
 
 usersRouter.get('/', usersController.getUsers);
 usersRouter.post('/OB', validateBody(usersSchema), usersController.createOB);
+usersRouter.post('/admin', authorizeRole([ROLES.SUPERADMIN]), validateBody(usersSchema), usersController.createAdmin);
 usersRouter.get('/:id', usersController.getUserById);
 usersRouter.put('/:id', validateBody(userUpdateSchema), usersController.updateUser);
 usersRouter.patch('/:id/status', usersController.updateUserStatus);
